--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.3.1
   intl: ^0.20.2
   flutter_native_splash: ^2.4.1
+  sleek_circular_slider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
