--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.20.2
   flutter_native_splash: ^2.4.1
   sleek_circular_slider: ^2.0.1
+  shared_preferences: ^2.3.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
