--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   shared_preferences: ^2.3.3
   google_fonts: ^6.2.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
