--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   shared_preferences: ^2.3.3
   google_fonts: ^6.2.1
   permission_handler: ^11.3.1
+  flutter_local_notifications: ^19.1.0
+  timezone: ^0.10.0
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
