--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_local_notifications: ^19.1.0
   timezone: ^0.10.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -92,3 +93,8 @@ flutter:
             weight: 600
           - asset: assets/fonts/Poppins-Bold.ttf
             weight: 800
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logos/trophySmall.png"
