--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,23 +31,24 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  sqflite: ^2.3.3+1
-  path: ^1.9.0
+  cupertino_icons: ^1.0.8
+  sqflite: ^2.4.2
+  sleek_circular_slider: ^2.1.0
+  flutter_native_splash: ^2.4.6
+  shared_preferences: ^2.5.3
+  permission_handler: ^12.0.1
+  flutter_local_notifications: ^19.4.0
   get: ^4.7.2
-  url_launcher: ^6.3.1
-  intl: ^0.20.2
-  flutter_native_splash: ^2.4.1
-  sleek_circular_slider: ^2.0.1
-  shared_preferences: ^2.3.3
-  google_fonts: ^6.2.1
-  permission_handler: ^11.3.1
-  flutter_local_notifications: ^19.1.0
-  timezone: ^0.10.0
-  flutter_launcher_icons: ^0.14.3
+  path: ^1.9.1
+  google_fonts: ^6.3.0
+  timezone: ^0.10.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,8 +74,19 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logos/
+    - assets/images/
 
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/to/resolution-aware-images
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/to/asset-from-package
+
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
   fonts:
       - family: Poppins
         fonts:
@@ -93,8 +105,6 @@ flutter:
             weight: 600
           - asset: assets/fonts/Poppins-Bold.ttf
             weight: 800
-
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/logos/trophySmall.png"
+  #
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/to/font-from-package
