--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path: ^1.9.1
   google_fonts: ^6.3.0
   timezone: ^0.10.1
+  flutter_launcher_icons: ^0.14.4
 
 flutter_icons:
   android: true
